# ai-template

./: .gitignore  README.md  demo.md  doc_generator.py  mcp.md  sample_content.txt  sample_toc.txt  test.py  test2.py
backend/: .env.example  .gitignore  .pre-commit-config.yaml  architecture.md  env.example  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  server.js  test_mcp_fix.py
backend/.cursor/rules/: ai-template.mdc  backend.mdc  python测试规范.mdc
backend/app/: README.md  config.py  main.py  schemas.py
backend/app/.cursor/rules/: frontend.mdc
backend/app/api/: __init__.py  deps.py  middleware.py  utils.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  conversation.py  knowledge.py  mcp.py  user.py  user_llm_config.py
backend/app/config/: __init__.py  database.py  logging.py  providers.py  security.py
backend/app/config/messages/: en_US.json  zh_CN.json
backend/app/core/: config.py  constants.py  database.py  decorators.py  dependencies.py  errors.py  exceptions.py  logging.py  messages.py  performance.py  permissions.py  repository.py  robustness.py  security.py  service.py  validators.py
backend/app/domain/: constants.py
backend/app/domain/models/: __init__.py  conversation.py  events.py  knowledge_base.py  mcp.py  user.py  user_llm_config.py
backend/app/domain/schemas/: auth.py  base.py  chat.py  conversation.py  knowledge.py  tools.py  user.py
backend/app/knowledge/: __init__.py  builder.py  chunking.py  config.py  document.py  docx_parser.py  llm_parser.py  preview.py  query.py  retriever.py  service.py  utils.py
backend/app/lib/knowledge/: builder.py  chunking.py  document.py  indexer.py  llm.py  loaders.py  model.py  node_parser.py  service.py
backend/app/lib/mcp/: __init__.py  config.py  connection.py  connection_pool.py  hub.py  session.py
backend/app/lib/mcp/managers/: __init__.py  base.py  prompt.py  resource.py  tool.py
backend/app/lib/mcp/models/: __init__.py  namespaced.py
backend/app/lib/mcp/utils/: __init__.py  cache.py  logger.py
backend/app/lib/providers/: anthropic.py  azure.py  base.py  deepseek.py  gemini.py  ollama.py  openai.py
backend/app/models/: knowledge_base.py
backend/app/providers/: base.py  openai.py
backend/app/repositories/: __init__.py  conversation.py  knowledge.py  knowledge_repository.py  mcp.py  user.py  user_llm_config.py
backend/app/routers/: user_llm_config.py
backend/app/routes/: __init__.py  chat.py  knowledge.py
backend/app/services/: auth.py  chat.py  conversation.py  knowledge.py  mcp.py  search.py  user.py  user_llm_config.py
backend/app/utils/: context_integration.py  context_optimizer.py  context_optimizer_backup.py
backend/docs/: CONTEXT_WINDOW_MANAGEMENT.md  MCP_ACTUAL_BEHAVIOR_SUMMARY.md
backend/routes/: chat.js
backend/scripts/: README.md  __init__.py  init_db.sh  init_db.sql
backend/tests/: README.md  conftest.py  factories.py
backend/tests/integration/: __init__.py  test_user_flow.py
backend/tests/unit/: __init__.py
backend/tests/unit/test_models/: __init__.py  test_user.py
backend/tests/unit/test_repositories/: __init__.py  test_user.py
backend/tests/unit/test_routes/: __init__.py  test_user.py
backend/tests/unit/test_schemas/: __init__.py  test_user.py
backend/tests/unit/test_services/: __init__.py  test_user.py
doc/: 01_一、执行摘要.md  01_第一章 引言.md  02_1.1 研究背景.md  02_二、现状分析和核心痛点.md  03_1.2 研究意义.md  03_三、总体规划框架.md  04_1.3 研究方法.md  04_四、核心任务.md  05_五、保障措施.md  05_第二章 文献综述.md  06_2.1 国内研究现状.md  06_六、风险与应对.md  07_2.2 国外研究现状.md  07_七、预期成果.md  08_2.3 研究趋势.md  09_第三章 理论基础.md  10_3.1 基本概念.md  11_3.2 核心理论.md  12_3.3 理论发展.md  13_第四章 分析与讨论.md  14_4.1 主要问题分析.md  15_4.2 解决方案.md  16_4.3 实施路径.md  17_4.4 预期效果.md  18_第五章 结论.md  19_5.1 研究总结.md  20_5.2 创新点.md  21_5.3 研究展望.md  outline.json  人工智能在教育中的应用研究.md  恒源祥数字化改造计划书.md  恒源祥数字化改造计划书_完整版.md
docs/: MCP_COMPLETE_GUIDE.md  mcp.md  (+1 more)
(+37 files in other folders)
